# kabsch

./: CMakeLists.txt  README.md  README.txt  kabsch.cpp  kabsch_zeb.h
tests/: CMakeCache.txt  local.txt  local_test1.txt  local_test2.txt  local_test3.txt  local_test4.txt  local_test5.txt  localmoresamples.txt  localunity.txt  world.txt  world_test1.txt  world_test4.txt  world_test5.txt
